<resources>
    <string name="app_name">PrayerApp</string>
    <string name="home">Home</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tasbeeh">تسبيح</string>
    <string name="pTimes">أوقات الصلاة</string>
    <string name="athkar">أذكار الصباح والمساء</string>
    <string name="settings">الإعدادات</string>
    <string name="dashboard">dashboard</string>
    <string name="about_us">about us</string>
    <string name="logout">logout</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="login">login</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an accont ?</string>
    <string name="confirm_password">confirm password</string>
    <string name="AppName">مواقيت الصلاة</string>
    <string name="login_ar">تسجيل الدخول</string>
    <string name="email_ar">البريد الإلكتروني</string>
    <string name="password_ar">كلمة المرور</string>
    <string name="account_ar">ليس لديك حساب ؟</string>
    <string name="join_ar">إنضم إلينا</string>
    <string name="c_pass_ar">تأكيد كلمة المرور</string>
    <string name="register_ar">تسجيل</string>
    <string name="have_an_account_ar">لديك حساب؟</string>
    <string name="nightathkar">أذكار المساء</string>
    <string name="moriningathkar">أذكار الصباح</string>
    <string name="back">السابق</string>
    <string name="next">التالي</string>
    <string name="calcway">طريقة حساب أوقات الصلاة:</string>
    <string name="asrtime">الحساب الفقهي صلاة العصر:</string>
    <string name="timedis">طريقة عرض الوقت:</string>
    <string name="silentmode">الوضع الصامت</string>
    <string name="submit">حفظ التعديلات</string>
    <string name="tv">TextView</string>
    <string name="tv1">TextView</string>
    <string name="tv2">TextView</string>
    <string name="tv3">TextView</string>
    <string name="tv4">TextView</string>
</resources>