<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints="text here"
        android:hint="@string/email_ar"
        android:inputType="textUri"
        android:layout_marginTop="200dp">
        ></EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="text here"
        android:hint="@string/password_ar"
        android:inputType="textUri"
        ></EditText>

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_ar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/rLink"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#3944BC"
            android:text="@string/join_ar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/account_ar"/>



    </LinearLayout>

</LinearLayout>