<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@mipmap/ic_launcher_round"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="مرحبا بك في تطبيق الصلاة"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="2pt"
        android:textColor="#420420"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints="text here"
        android:hint="@string/email_ar"
        android:inputType="textUri"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white">
        ></EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="text here"
        android:hint="@string/password_ar"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"></EditText>

    <EditText
        android:id="@+id/confpass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="text here"
        android:hint="@string/c_pass_ar"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"></EditText>

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register_ar"
        android:backgroundTint="#CC420420"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login_ar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/have_an_account_ar"
            android:textStyle="bold"
            android:layout_marginLeft="2pt"
            android:textColor="#420420"
            />

    </LinearLayout>

</LinearLayout>