<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Athkar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include layout="@layout/main_toolbar"></include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="283dp"
            android:gravity="center"
            android:text="@string/athkar"
            android:textSize="50sp"></TextView>
        <Button
            android:id="@+id/bt_morning"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/moriningathkar"
            android:onClick="clickMorining"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/bt_night"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/nightathkar"
            android:textSize="25sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer"></include>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>