<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nightAthkar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include layout="@layout/main_toolbar"></include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:gravity="center"
            android:text="@string/nightathkar"
            android:textSize="50sp"></TextView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="429dp"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="20px"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="15sp"
                android:onClick="clickBack"/>
            <Button
                android:id="@+id/bt_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="15sp"
                android:onClick="clickNext"/>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>